# android_libs

./: CMakeLists.txt  README.md
armv8_a/ffmpeg_libs/: build_ffmpeg.sh
armv8_a/ffmpeg_libs/lib/pkgconfig/: libavfilter.pc  libavutil.pc  libswresample.pc  srt.pc
cmake/: CompilerWarnings.cmake  DownloadFetchContent.cmake  FileRecursive.cmake  GitFetchContent.cmake  InitSystemName.cmake  MetaUtil.cmake  OptionDefinition.cmake
ffmpeg/: CMakeLists.txt
ffmpeg/ffwrap/: fferr.hpp  ffinterrup_cb.hpp  ffmuxer.hpp  ffpacket.hpp  fframe.hpp  ffremuxer.hpp  ffutil.hpp
ffmpeg/srtwrap/: README.md  srtwrap.hpp
ffmpeg_libs/android_armv8_a/lib/pkgconfig/: libavdevice.pc  libswscale.pc
ffmpeg_libs/armv8_a/lib/pkgconfig/: libavcodec.pc  libavformat.pc
jmi/: CMakeLists.txt  jmi_macro.hpp
json/: CMakeLists.txt
marl/: CMakeLists.txt
sigslot/: CMakeLists.txt
spdlog/: CMakeLists.txt  xlog.hpp  xlog_level_base.hpp  xlog_path.hpp
utils/: CMakeLists.txt
utils/common/: auto_guard.hpp  computing.hpp  global_function.hpp  macro_conf.hpp  template.hpp
utils/container/: block_queue.hpp  lru_cache.hpp  map.hpp  pair.hpp  queue.hpp  rational.hpp
utils/semaphore/: semaphore.hpp
utils/sp_holder/: sp_holder.hpp  sp_holder_recorder.hpp
utils/task/: task.hpp  task_func.hpp  task_thread.hpp
utils/thread/: thread_unix.hpp  thread_win.hpp  thread_wrap.hpp
utils/time/: time.hpp  time_operator.hpp  time_thread.hpp  time_utils.hpp
webrtc/: CMakeLists.txt
